----------
v3.0.7-git
----------



------
v3.0.6
------

[mjr] Fix issue with synchronizing deleted contacts (Bug #10422).
[jan] Fix searching for duplicates on some databases (Bug #10383).
[mjr] Add and support more attributes by default.


------
v3.0.5
------

[mjr] Fix obtaining default share via Turba's API (vilius@lnk.lt, Bug #10393).
[mjr] Force ActiveSync device reset after sync_books pref is changed
      (Request #10342).

------
v3.0.4
------

[jan] Pass contact object to decode_attribute hook (kd@tu-cottbus.de, Bug
      #10287).
[jan] Complete fix for importing LDIF files (Bug #10139).


------
v3.0.3
------

[rla] Support multiple address books in search portal block (Request #8786).
[mjr] Fix importing LDIF files (Bug #10139).
[mjr] Fix issue introduced in 3.0.1 that caused contact images to not display
      (Bug #10050).
[jan] Fix editing of multiple contacts at once (Bug #10085).
[jan] Enable homeAdress and workAdress composite fields by default.


------
v3.0.2
------

[jan] Fix exporting department attribute over ActiveSync.
[mjr] Fix adding contacts with a category selected.


------
v3.0.1
------

[jan] Fix LDAP schema checking (Bug #9826).
[jan] Fix creating temporary files with open_basedir restrictions.
[mjr] Fix importing objects with categories (Bug #9841).
[mjr] Fix merging duplicate contacts (Bug #9828).
[mjr] Allow unsetting the GAL and Client Address Book settings (Bug #9843).


----
v3.0
----

[mjr] Fix deletion of virtual address books (Bug #9779).
[jan] Fix saving searches to virtual address books (Bug #9776).
[mjr] Datatree share to SQL upgrade script refactored for Horde 4.
[jan] Move all executable scripts to bin/ and prefix with turba-.
[jan] Add fields to all addresses if multiple passed to addField() API method
      (Request #3482).


--------
v3.0-RC2
--------

[mjr] Fix issue that caused the inability to preview contact images while
      uploading (Bug #9702).


--------
v3.0-RC1
--------
