@@ -2,6 +2,7 @@
 v3.0.7-git
 ----------
 
+[jan] Add missing migration script (Bug #10436).
 
 
 ------
